--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <base href="/">
     <title>Angular 2 Seed</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-  </head>
-  <body>
-    <main-app>Loading...</main-app>
+</head>
+
+<body>
+    <main-app>
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h4 class="panel-heading-title text-center">Loading</h4>
+            </div>
+            <div class="panel-body">
+                <div class="progress">
+                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="20" style="width: 100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main-app>
     <script src="/client/app/js/bundle.js"></script>
-  </body>
+</body>
+
 </html>
