Import routes and store the routes in a publich variable

--- a/client/app/common/header/header.component.html
+++ b/client/app/common/header/header.component.html
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-fixed-top navbar-inverse test">
   <div class="container">
-    <a class="navbar-brand">Your App Name Here</a>
+    <a class="navbar-brand">{{brandMenu.title}}</a>
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngFor="let menuItem of menuItems">
+        <a class="nav-item nav-link" [routerLink]="[menuItem.path]">{{menuItem.title}}</a>
+      </li>
+    </ul>
   </div>
 </nav>
