--- a/client/app/common/header/header.component.html
+++ b/client/app/common/header/header.component.html
@@ -1,10 +1,15 @@
 <nav class="navbar navbar-fixed-top navbar-inverse test">
   <div class="container">
-    <a class="navbar-brand">{{brandMenu.title}}</a>
-    <ul class="navbar-nav">
-      <li class="nav-item" *ngFor="let menuItem of menuItems">
-        <a class="nav-item nav-link" [routerLink]="[menuItem.path]">{{menuItem.title}}</a>
-      </li>
-    </ul>
+    <div class="navbar-header">
+      <a class="navbar-brand">{{brandMenu.title}}</a>
+    </div>
+
+    <div class="navbar-left">
+      <ul class="nav navbar-nav">
+        <li class="nav-item" *ngFor="let menuItem of menuItems">
+          <a class="navbar-link" [routerLink]="[menuItem.path]">{{menuItem.title}}</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
