--- a/client/app/common/header/header.component.html
+++ b/client/app/common/header/header.component.html
@@ -2,12 +2,20 @@
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand">{{brandMenu.title}}</a>
+      <button type="button" class="navbar-toggle pull-right"
+      aria-label="Toggle navigation"
+      (click)="toggle()"
+      >
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
 
-    <div class="navbar-left">
+    <div class="navbar-collapse" [ngClass]="{collapse: isCollapsed}" [attr.aria-expanded]="!isCollapsed">
       <ul class="nav navbar-nav">
         <li class="nav-item" *ngFor="let menuItem of menuItems">
-          <a class="navbar-link" [routerLink]="[menuItem.path]">{{menuItem.title}}</a>
+          <a class="navbar-link" [routerLink]="[menuItem.path]" routerLinkActive="active">{{menuItem.title}}</a>
         </li>
       </ul>
     </div>
