Add css class for pointer

--- a/client/app/common/header/header.component.html
+++ b/client/app/common/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-inverse test">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand">{{brandMenu.title}}</a>
+      <a class="navbar-brand pointer">{{brandMenu.title}}</a>
       <button type="button" class="navbar-toggle pull-right"
       aria-label="Toggle navigation"
       (click)="toggle()"
